[gd_scene load_steps=6 format=2]

[ext_resource path="res://Battle/UI/PlayerStats.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/OpenDyslexic3-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/ui/textbox.png" type="Texture" id=3]
[ext_resource path="res://UI/FontSmall.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
extra_spacing_top = -4
extra_spacing_bottom = -1
font_data = ExtResource( 2 )

[node name="PlayerStats" type="NinePatchRect"]
margin_right = 200.0
margin_bottom = 120.0
rect_clip_content = true
size_flags_horizontal = 11
size_flags_vertical = 11
texture = ExtResource( 3 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_right = 86.0
margin_bottom = 122.0
theme = ExtResource( 4 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 166.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 119.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dogtective"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_top = 6.0
margin_right = 140.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.52549, 0.317647, 0.0117647, 1 )
text = "lv"

[node name="LevelLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_top = 6.0
margin_right = 166.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"

[node name="LevelContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 166.0
margin_bottom = 36.0

[node name="HPContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 166.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="VBoxContainer/HPContainer"]
margin_right = 30.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.52549, 0.317647, 0.0117647, 1 )
text = "HP:"

[node name="HPLabel" type="Label" parent="VBoxContainer/HPContainer"]
margin_left = 34.0
margin_right = 54.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99"

[node name="Label2" type="Label" parent="VBoxContainer/HPContainer"]
margin_left = 58.0
margin_right = 68.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "/"

[node name="MaxHPLabel" type="Label" parent="VBoxContainer/HPContainer"]
margin_left = 72.0
margin_right = 106.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"

[node name="BPContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 166.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="VBoxContainer/BPContainer"]
margin_right = 29.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.52549, 0.317647, 0.0117647, 1 )
text = "BP:"

[node name="BPLabel" type="Label" parent="VBoxContainer/BPContainer"]
margin_left = 33.0
margin_right = 54.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "15"

[node name="Label2" type="Label" parent="VBoxContainer/BPContainer"]
margin_left = 58.0
margin_right = 68.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "/"

[node name="MaxBPLabel" type="Label" parent="VBoxContainer/BPContainer"]
margin_left = 72.0
margin_right = 95.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "20"

[node name="Tween" type="Tween" parent="."]
